--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -37,3 +37,4 @@ jobs:
     with:
       dockerfile: docker/radarr/Dockerfile
       platform: 'linux/amd64,linux/arm64'
+      build_dir: docker/radarr
