--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,6 @@ jobs:
     with:
       dockerfile: docker/radarr/Dockerfile
       platform: 'linux/amd64,linux/arm64'
+      build_dir: docker/radarr
     secrets:
       PACKAGE_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
