--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
       dockerfile: docker/readarr/Dockerfile
       platform: 'linux/amd64,linux/arm64'
       build_dir: docker/readarr
+      image_id: home-kube-media/readarr
     secrets:
       PACKAGE_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
 
@@ -38,5 +39,6 @@ jobs:
       dockerfile: docker/radarr/Dockerfile
       platform: 'linux/amd64,linux/arm64'
       build_dir: docker/radarr
+      image_id: home-kube-media/radarr
     secrets:
       PACKAGE_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
