--- a/helm/charts/readarr/values.yaml
+++ b/helm/charts/readarr/values.yaml
@@ -19,6 +19,19 @@ service:
   type: ClusterIP
   port: 80
 
+ingress:
+  enabled: false
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+  path: /
+  hosts:
+    - radarr.bananaspliff.org
+  tls:
+   - secretName: radarr-bananaspliff-org
+     hosts:
+       - radarr.bananaspliff.org
+
 volumes:
   - name: media-lynott
     persistentVolumeClaim:
