--- a/helm/charts/sonarr/templates/service.yaml
+++ b/helm/charts/sonarr/templates/service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "readarr.fullname" . }}
+  name: {{ template "sonarr.fullname" . }}
   labels:
-    app: {{ template "readarr.name" . }}
-    chart: {{ template "readarr.chart" . }}
+    app: {{ template "sonarr.name" . }}
+    chart: {{ template "sonarr.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 8787
+      targetPort: 8989
       protocol: TCP
       name: http
   selector:
-    app: {{ template "readarr.name" . }}
+    app: {{ template "sonarr.name" . }}
     release: {{ .Release.Name }}
