--- a/helm/charts/sonarr/values.yaml
+++ b/helm/charts/sonarr/values.yaml
@@ -1,8 +1,8 @@
-## media.radarr.values.yml
+### media.sonarr.values.yml
 replicaCount: 1
 
 image:
-  repository: ghcr.io/bpafoshizle/home-kube-media/radarr
+  repository: ghcr.io/bpafoshizle/home-kube-media/sonarr
   tag: latest
   pullPolicy: Always
 
@@ -27,11 +27,11 @@ volumes:
 volumeMounts:
   - name: media-lynott
     mountPath: "/config"
-    subPath: "configs/radarr" # Path /mnt/ssd/media/configs/radarr where radarr writes the configuration
+    subPath: "configs/sonarr" # Path /mnt/ssd/media/configs/sonarr where sonarr writes the configuration
   - name: media-lynott
     mountPath: "/downloads/transmission"
-    subPath: "downloads/transmission" # Path /mnt/ssd/media/downloads/transmission where radarr picks up downloaded movies
+    subPath: "downloads/transmission" # Path /mnt/ssd/media/downloads/transmission where sonarr picks up downloaded episodes
   - name: media-lynott
-    mountPath: "/movies"
-    subPath: "library/movies" # Path /mnt/ssd/media/library/movies where radarr moves and renames the movies
+    mountPath: "/tv"
+    subPath: "library/tv" # Path /mnt/ssd/media/library/tv where sonarr moves and renames the episodes
 
