--- a/helm/charts/radarr/values.yaml
+++ b/helm/charts/radarr/values.yaml
@@ -19,6 +19,9 @@ service:
   type: ClusterIP
   port: 80
 
+ingress:
+  enabled: false
+
 volumes:
   - name: media-lynott
     persistentVolumeClaim:
@@ -35,3 +38,16 @@ volumeMounts:
     mountPath: "/movies"
     subPath: "library/movies" # Path /mnt/ssd/media/library/movies where radarr moves and renames the movies
 
+resources:
+  requests:
+    memory: 128Mi
+    cpu: 0.1
+  limits:
+    memory: 256Mi
+    cpu: 0.5
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
